# Document-Finder

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  LICENSE  README.md  REVIEW.md  THIRD_PARTY_NOTICES.md  UI-REVIEW.md  build.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rebuild.ps1  run.ps1  run.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: PREFLIGHTAUDIT.md  RELEASE.md
icons/: SOURCE.md
icons/Document Finder.icon/: icon.json
packaging/flatpak/: com.webworldwide.DocumentFinder.metainfo.xml  com.webworldwide.DocumentFinder.yml
scripts/: rebuild.mjs  setup_searxng.sh  uninstall.ps1  uninstall.sh
site/: CNAME  index.html  site.css
src/: App.svelte  App.tsx  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/resources/: searxng-settings.yml
src-tauri/searxng/: settings.yml
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs
src-tauri/src/ai/: downloader.rs  embed_worker.rs  embeddings.rs  llm.rs  mod.rs  registry.rs  state.rs  storage.rs
src-tauri/src/engine/: authority.rs  citation_graph.rs  db.rs  dedup.rs  downloader.rs  extract.rs  manifest.rs  mod.rs  orchestrator 2.rs  orchestrator.rs  query 2.rs  query.rs  ranking.rs  runlog.rs
src-tauri/src/sources/: arxiv.rs  bing_html.rs  brave_html.rs  doaj.rs  duckduckgo.rs  gutenberg.rs  internet_archive.rs  local_searxng.rs  marginalia_html.rs  meta_search.rs  mod.rs  mojeek_html.rs  openalex.rs  searxng.rs  searxng_pool.rs  semantic_scholar.rs  startpage_html.rs  web_common.rs  zenodo.rs
src-tauri/src/util/: mod.rs  path_safety.rs  url_safety.rs
src-tauri/tests/: events_in_sync.rs  linux_identifiers_in_sync.rs  local_searxng_api.rs  network_smoke.rs  permissions_in_sync.rs
src/components/: Banner.tsx  DocRow.tsx  ErrorBoundary.tsx  FindTab.svelte  FindTab.tsx  FirstRunModelDialog.tsx  LibraryView.svelte  LibraryView.tsx  LiveDownloadStream.svelte  LiveDownloadStream.tsx  LiveResultsView.tsx  Logo.tsx  LogsPanel.tsx  MetaSearchHealthBar.tsx  ModelDownloadCard.tsx  ModelStatusBadge.tsx  ModelsPanel.tsx  PipelineStrip.tsx  ProgressBar.tsx  RunCard.tsx  SearxngSetupPanel.tsx  SettingsView.svelte  SettingsView.tsx  Sidebar.svelte  Sidebar.tsx  SourcePanel.tsx  Sparkline.tsx  ThemeAccentPicker.tsx  ThemePicker.tsx  WelcomeDialog.tsx
src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  tabs.tsx  textarea.tsx  toggle.tsx
src/lib/: errors.ts  events.ts  log.ts  tauri.ts  utils.test 2.ts  utils.test.ts  utils.ts
src/stores/: models.ts  pipeline.test.ts  pipeline.ts  run.svelte.ts  run.test.ts  run.ts  runStore.ts  settings.svelte.ts  settings.test.ts  settings.ts  settingsStore.ts  theme.ts  ui.svelte.ts  ui.ts  uiStore.ts
src/styles/: globals.css
src/test/: setup.ts
