[package]
name = "document-finder"
version = "2.0.0"
description = "Find, download, and bundle open-access documents for AI conversational awareness"
authors = ["Adam Nolle"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "document_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }

# File formats
pdf-extract = "0.7"
zip = "2"
flate2 = "1"

# Concurrency primitives
dashmap = "6"

# Utilities
regex = "1"
once_cell = "1"
md-5 = "0.10"
hex = "0.4"
percent-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Errors / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# AI: model download + verification (E1 foundation)
sha2 = "0.10"

# AI: semantic embeddings (E2 — optional, default on via "ai-embeddings" feature)
# rustls variants match our reqwest TLS stack — avoids pulling in openssl-sys.
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"
wiremock = "0.6"

[features]
default = ["custom-protocol", "ai-embeddings"]
custom-protocol = ["tauri/custom-protocol"]
# Tier 2 — semantic reranking via local ONNX embedding model.
# Disable for fast dev rebuilds: `cargo build --no-default-features --features=custom-protocol`
ai-embeddings = ["dep:fastembed"]
# Tier 3 — local LLM via llama.cpp. Off by default (see E3 commit).
ai-llm = []

[profile.dev]
opt-level = 0
split-debuginfo = "unpacked"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = 3
strip = true
